# 42-Projects

A-Maze-ing/: .gitignore  README.md  __init__.py  a-maze-ing.py  input_parser.py  maze.py  solution.py
A-Maze-ing/display/: colors.py  display.py  walls.py
A-Maze-ing/tests/: tell_walls.py
A_maze_ing/: .gitignore  README.md  a_maze_ing.py  default_config.txt  makefile  maze.py  pyproject.toml
A_maze_ing/display/: __init__.py  colors.py  display.py
A_maze_ing/utils/: __init__.py  input_parser.py  solution.py
Codexion/: Makefile  a.out  header.h  main.c
Codexion/parser/: main_parse.c  parse.h  parse_utils.c
Push_Swap/: main.c  push_swap
libft/: .ft_disp_x.c.swp
python00/ex1/: ft_plot_area.py
python00/ex2/: ft_harvest_total.py
python00/ex3/: ft_plant_age.py
python00/ex4/: ft_water_reminder.py
python00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
python00/ex6/: ft_garden_summary.py
python00/ex7/: ft_seed_inventory.py
python01/ex0/: ft_garden_intro.py
python01/ex2/: ft_plant_growth.py
python01/ex3/: ft_plant_factory.py
python01/ex4/: ft_garden_security.py
python01/ex5/: ft_plant_types.py
python01/ex6/: ft_garden_analytics.py
python02/ex0/: ft_first_exception.py
python06/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
python_modules/python08/ex1/: pyproject.toml  requirements.txt
(+117 files in other folders)
