[tool.poetry]
name = "mazegen"
version = "1.0.0"
description = "Maze generator"
authors = ["MiguelTeixeira07 <miguelcasacateixeira@gmail.com>", "mesinidotexe <victormesini007@gmail.com>"]
readme = "README.md"

packages = [
    { include = "display" }
]

include = [
    "maze.py"
]

[tool.poetry.dependencies]
python = ">=3.10"
mypy = "^1.5.1"
flake8 = "^7.1"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
