[tool.poetry]
name = "loading"
version = "0.1.0"
description = ""
authors = ["mesinidotexe <victormesini007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^3.0.2"
numpy = "^2.4.4"
requests = "^2.33.1"
matplotlib = "^3.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
